# ab-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.arb-monitor  Dockerfile.dashboard  Dockerfile.optimized  Dockerfile.runtime  README.md  TESTING.md  docker-compose.yml  railway.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  deploy.yml
.sqlx/: query-816ba926388639739443ddc9ccf542b432d5fd223a4616c2884deb6c354a5b9a.json  query-a9660321d29165e33deda0465b7f6f43e51116251d024617f14c4403e76098fc.json  query-abc5a2b2be0225ddc5f1f09034336d42837353ce17c4168d89207e4ef710ec4b.json  query-b5ab21bbba14c8590c8103c562182cbd764704a1e037af68c1230cecb59ed43a.json
benches/: latency.rs  throughput.rs
crates/api-server/: Cargo.toml
crates/api-server/examples/: set_dynamic_config.rs
crates/api-server/src/: accounting_ledger.rs  arb_executor.rs  auto_optimizer.rs  backtest_automation.rs  copy_trade_stop_loss.rs  copy_trading.rs  crypto.rs  dynamic_tuner.rs  email.rs  error.rs  exit_handler.rs  flow_feature_calculator.rs  gamma_syncer.rs  learning.rs  learning_evaluator.rs  learning_models.rs  learning_rollouts.rs  lib.rs  main.rs  metrics_calculator.rs  middleware.rs  position_reconciler.rs  position_service.rs  quant_signal_executor.rs  redis_forwarder.rs  routes.rs  runtime_sync.rs  schema.rs  seed.rs  state.rs  strategy_health_calculator.rs  strategy_modes.rs  strategy_pnl_calculator.rs  trade_events.rs  wallet_harvester.rs  wallet_inventory.rs  websocket.rs  workspace_scope.rs
crates/api-server/src/cex/: binance_ws.rs  latency_arb_executor.rs  market_mapper.rs  mod.rs  price_tracker.rs
crates/api-server/src/handlers/: accounting.rs  activity.rs  admin_workspaces.rs  allocations.rs  auth.rs  auto_rotation.rs  backtest.rs  demo.rs  discover.rs  health.rs  invites.rs  markets.rs  mod.rs  onboarding.rs  order_signing.rs  positions.rs  recommendations.rs  recovery.rs  risk.rs  risk_allocations.rs  signals.rs  strategy_health.rs  trade_flow.rs  trading.rs  users.rs  vault.rs  wallet_auth.rs  wallets.rs  workspaces.rs
crates/api-server/src/signals/: cross_market_signal.rs  flow_signal.rs  mean_reversion_signal.rs  mod.rs  resolution_signal.rs
crates/arb-monitor/: Cargo.toml
crates/arb-monitor/src/: main.rs  monitor.rs  position_tracker.rs  signals.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  audit.rs  audit_storage_pg.rs  jwt.rs  key_vault.rs  lib.rs  rbac.rs  wallet.rs
crates/backtester/: Cargo.toml
crates/backtester/src/: data_store.rs  lib.rs  simulator.rs  strategy.rs
crates/bot-scanner/: Cargo.toml
crates/bot-scanner/src/: feature_extractor.rs  indexer.rs  main.rs  scorer.rs
crates/polymarket-core/: Cargo.toml
crates/polymarket-core/src/: config.rs  error.rs  feature_extractor.rs  lib.rs  sizing.rs  types.rs
crates/polymarket-core/src/api/: approvals.rs  clob.rs  gamma.rs  mod.rs  polygon.rs
crates/polymarket-core/src/db/: inventory.rs  mod.rs  positions.rs  wallets.rs
crates/polymarket-core/src/signing/: domain.rs  mod.rs  order_types.rs  signer.rs
crates/polymarket-core/src/types/: market.rs  order.rs  position.rs  signal.rs  strategy.rs  wallet.rs  workspace.rs
crates/risk-manager/: Cargo.toml
crates/risk-manager/src/: advanced_stops.rs  circuit_breaker.rs  circuit_breaker_repo.rs  lib.rs  stop_loss.rs  stop_loss_repo.rs
crates/trading-engine/: Cargo.toml
crates/trading-engine/src/: copy_trader.rs  executor.rs  lib.rs  position_manager.rs  recommendation.rs
crates/wallet-tracker/: Cargo.toml
crates/wallet-tracker/src/: advanced_predictor.rs  calibration.rs  discovery.rs  lib.rs  profitability.rs  risk_scorer.rs  scoring.rs  strategy_classifier.rs  success_predictor.rs  trade_monitor.rs
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
dashboard/app/activity/: page.tsx
dashboard/app/admin/: layout.tsx  page.tsx
dashboard/hooks/: index.ts  useActivity.ts  useBacktest.ts  usePortfolioStats.ts  usePositions.ts  useTradeSign.ts  useWalletAuth.ts  useWallets.ts  useWebSocket.ts
dashboard/lib/: activity.ts  api.ts  queryClient.ts  riskPresets.ts  utils.ts  validations.ts  wallet-config.ts
dashboard/providers/: QueryProvider.tsx  WalletProvider.tsx  WebSocketProvider.tsx  WorkspaceProvider.tsx
dashboard/stores/: activity-store.ts  auth-store.ts  demo-portfolio-store.ts  mode-store.ts  notification-store.ts  roster-store.ts  settings-store.ts  toast-store.ts  wallet-store.ts  workspace-store.ts
dashboard/types/: api.ts
docker/: prometheus.yml
docker/redis/: redis-entrypoint.sh
docs/: DEPLOY.md  learning-model-artifact-format.md  self-improving-model-design.md  state-machines.md  win-rate-roadmap.md
examples/: test_wallet.rs
migrations/: 001_initial_schema.sql  002_trading_tables.sql  003_wallet_tracking.sql  004_timescale.sql  005_api_server_tables.sql  009_position_failure_states.sql  010_password_reset_tokens.sql  011_user_onboarding.sql  012_allow_owner_invite_role.sql  013_optimizer_status.sql  014_demo_positions.sql  015_wallet_automation.sql  016_wallet_authentication.sql  017_workspace_walletconnect.sql  018_pending_wallet_orders.sql  019_auth_challenge_cleanup.sql  020_add_composite_indices.sql  021_wallet_trades.sql  022_workspace_trading_config.sql  023_widen_metrics_precision.sql  024_lower_wallet_indexes.sql  025_backtest_extended_metrics.sql  026_positions_source_token_id.sql  027_wallet_strategy_type.sql  028_ensemble_predictions.sql  029_dynamic_tuning.sql  030_dynamic_tuner_state.sql  031_dynamic_config_history_actions.sql  032_workspace_cb_config.sql  033_workspace_exit_handler.sql  034_data_hygiene.sql  035_aggressive_chunk_cleanup.sql  036_pipeline_indexes.sql  037_token_condition_cache.sql  038_market_metadata.sql  039_flow_features.sql  040_quant_signals.sql  041_quant_dynamic_config.sql  042_strategy_pnl.sql  043_market_correlations.sql  (+31 more)
src/: lib.rs
tests/: integration_tests.rs
(+156 files in other folders)
