[workspace]
resolver = "2"
members = [
    "crates/arb-monitor",
    "crates/bot-scanner",
    "crates/polymarket-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anthony Limo"]
license = "MIT"
repository = "https://github.com/anthonylimo/ab-bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Testing
tokio-test = "0.4"
mockall = "0.12"

# Internal crates
polymarket-core = { path = "crates/polymarket-core" }
