[workspace]
resolver = "2"
members = [
    "crates/api-server",
    "crates/arb-monitor",
    "crates/auth",
    "crates/backtester",
    "crates/bot-scanner",
    "crates/polymarket-core",
    "crates/risk-manager",
    "crates/trading-engine",
    "crates/wallet-tracker",
]

# Root package for benchmarks
[package]
name = "ab-bot"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Limo"]
license = "MIT"
repository = "https://github.com/anthonylimo/ab-bot"
description = "Polymarket arbitrage and copy trading bot"

[dependencies]
polymarket-core = { path = "crates/polymarket-core" }
risk-manager = { path = "crates/risk-manager" }
trading-engine = { path = "crates/trading-engine" }
auth = { path = "crates/auth" }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
rayon = "1.10"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[example]]
name = "test_wallet"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anthony Limo"]
license = "MIT"
repository = "https://github.com/anthonylimo/ab-bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Testing
tokio-test = "0.4"
mockall = "0.12"

# Concurrent data structures
dashmap = "5.5"

# Encoding
hex = "0.4"
base64 = "0.22"

# Async traits
async-trait = "0.1"

# Ethereum signing (for Polymarket CLOB)
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-signer = "0.6"
alloy-signer-local = "0.6"

# HMAC for L2 authentication
hmac = "0.12"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tower = "0.4"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Internal crates
polymarket-core = { path = "crates/polymarket-core" }
trading-engine = { path = "crates/trading-engine" }
risk-manager = { path = "crates/risk-manager" }
auth = { path = "crates/auth" }
wallet-tracker = { path = "crates/wallet-tracker" }
backtester = { path = "crates/backtester" }
api-server = { path = "crates/api-server" }

# Pin home crate to version compatible with Rust 1.85
home = "=0.5.9"
