[package]
name = "api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
# Configuration
dotenvy.workspace = true
tracing-subscriber.workspace = true
# Internal crates
polymarket-core.workspace = true
trading-engine.workspace = true
risk-manager.workspace = true
auth.workspace = true
wallet-tracker.workspace = true
backtester.workspace = true

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tower_governor = "0.8"

# Async
tokio.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
hex.workspace = true

# Random (for demo data generation)
rand = "0.9"

# Password hashing
argon2 = "0.5"

# Email (Resend HTTP API)
reqwest = { workspace = true }

# Hashing (for password reset tokens)
sha2 = "0.10"

# SIWE (Sign-In With Ethereum)
siwe = "0.6"
time = "0.3"

# Crypto (for signature verification)
k256 = { version = "0.13", features = ["ecdsa"] }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Database
sqlx.workspace = true

# Redis
redis.workspace = true

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI
clap.workspace = true

[dev-dependencies]
tokio-test.workspace = true
