[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
chrono.workspace = true
uuid.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Database
sqlx.workspace = true

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
aes-gcm = "0.10"

# Ethereum wallet signing
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

# SIWE (Sign-In with Ethereum)
siwe = "0.6"

# Secrets management (optional AWS support)
# aws-sdk-secretsmanager = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test.workspace = true

[features]
default = []
# aws = ["aws-sdk-secretsmanager"]
