[package]
name = "bot-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Wallet behavior analysis and bot detection for Polymarket"

[[bin]]
name = "bot-scanner"
path = "src/main.rs"

[dependencies]
# Internal
polymarket-core = { workspace = true }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Types
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
