[package]
name = "polymarket-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types, API clients, and database models for Polymarket Scanner"

[dependencies]
# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Types
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
