[package]
name = "polymarket-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types, API clients, and database models for Polymarket Scanner"

[dependencies]
# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Types
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Encoding
hex.workspace = true
base64.workspace = true

# Ethereum signing (for CLOB authentication)
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

# HMAC for L2 authentication
hmac.workspace = true
sha2 = "0.10"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
